--- a/VRChat/64/1280964.html
+++ b/VRChat/64/1280964.html
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "rz4kLC8LI/4etrXg4Qe8lypF+CGLPFSwHBHZEtQg3Dk="></script>
+    "onzBg0WZpEREed1/NwV7z12PNlFBASMQ6wxC0I9UeD4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"競泳水着 [VRoid ベータ版 用テクスチャ]","description":"◆商品説明\n\nVRoid Studioベータ版で使用できる、競泳水着のテクスチャーになります。\nテクスチャーサイズは2048×2048。全7種類。\n\n※正式版では使用できません。\n※商品画像にあるモデルデータは含まれません。\n\n◆テクスチャーの使い方\n\n体型編集→テクスチャ→肌\n\nデフォルト画像の上に＋ボタンでレイヤーを作成\n右クリックからインポートを選択し追加します。\n\n◆利用規約\n\n著作権は放棄しません。\n\nデータ改変：可\n\n個人・商用利用：可。クレジット表記の必要もありません。\n\nゲームや動画での利用：可\n\nVRchat・VirtualCastでの利用：可（下記に注意事項あり）\n\nデータ改変の有無に関わらず、再配布・販売は禁止します。\n\n違法、公序良俗に違反する媒体への使用は禁止します。\n\n本人以外が利用できる状態にする行為（VRchatのアバターペデスタル等）は\n再配布に該当する為、禁止とします。\n\nVRoidHub等での他者の利用を禁止する状態での公開は許可します。\n\nテクスチャを使用した際のトラブルに関しては、一切の責任を負いません。\nまた返金は致しかねます。ご了承ください。\n\n利用規約は、VRM、VRoidStudio、VRChat等の仕様・機能変更に伴い、一部改訂されることがあります。\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n店　名：あさづけ屋\n作成者：ＡＺＫ\nTwitter：＠azk_chazuke","url":"https://booth.pm/ja/items/1280964","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/f3d9117d-c7b3-4c0b-8737-f8cba73126eb/i/1280964/ad3de1da-d35b-48d4-9283-11e858a8e5f8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rz4kLC8LI/4etrXg4Qe8lypF+CGLPFSwHBHZEtQg3Dk="></script>
+    nonce="onzBg0WZpEREed1/NwV7z12PNlFBASMQ6wxC0I9UeD4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -163,7 +163,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              37
+                              38
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,7 +178,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              37
+                              38
                             </div>
                           </div></a>
                         </div>
@@ -715,7 +715,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;},{&quot;label&quot;:&quot;ドールズ パーティー49&quot;,&quot;value&quot;:&quot;dollsparty49&quot;},{&quot;label&quot;:&quot;J.GARDEN53&quot;,&quot;value&quot;:&quot;j-garden53&quot;}]"
+    "[{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;},{&quot;label&quot;:&quot;#にじそうさく07&quot;,&quot;value&quot;:&quot;nijisousaku07&quot;},{&quot;label&quot;:&quot;COMITIA144&quot;,&quot;value&quot;:&quot;comitia144&quot;},{&quot;label&quot;:&quot;#超エアブー230505&quot;,&quot;value&quot;:&quot;air-boo-0505&quot;},{&quot;label&quot;:&quot;コスホリック35&quot;,&quot;value&quot;:&quot;cosholic35&quot;},{&quot;label&quot;:&quot;SUPER COMIC CITY 30&quot;,&quot;value&quot;:&quot;supercomiccity30&quot;},{&quot;label&quot;:&quot;M3-2023春&quot;,&quot;value&quot;:&quot;m3-2023s&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
